Part 3, midway through

--- a/index.html
+++ b/index.html
@@ -49,7 +49,7 @@
 		<img id="font" src="./images/font.png" />
 		<img id="hud" src="./images/hud.png" />
 		<img id="stage" src="./images/stage.png" />
-
+		<img id="power-ups" src="./images/powerups.png" />
 		<!-- <audio id="bgm" src="./sound/area12.ogg" preload loop></audio> -->
 	</body>
 </html>
