End of Part 3 w/o refactor

--- a/index.html
+++ b/index.html
@@ -50,6 +50,6 @@
 		<img id="hud" src="./images/hud.png" />
 		<img id="stage" src="./images/stage.png" />
 		<img id="power-ups" src="./images/powerups.png" />
-		<!-- <audio id="bgm" src="./sound/area12.ogg" preload loop></audio> -->
+		<audio id="battle-music" src="./sound/stageMusic.mp4" preload="auto" loop></audio>
 	</body>
 </html>
